tests/baselines/reference/unicodeExtendedEscapesInTemplates07(target=es5).errors.txt
unicodeExtendedEscapesInTemplates07.ts(3,13): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.


==== unicodeExtendedEscapesInTemplates07.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  1. Assert: 0 ≤ cp ≤ 0x10FFFF.
    var x = `\u{110000}`;
                ~~~~~~
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    